--- a/notebooks_paperplots/plot_paper_ready.ipynb
+++ b/notebooks_paperplots/plot_paper_ready.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "bccc3184-5d35-4162-ae5c-ddc32e7e456c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "12077412-18ca-49c3-9053-c08ac8b292d3",
    "metadata": {},
    "outputs": [],
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "f8fe18b7-fc65-4877-9711-05f3f66e3417",
    "metadata": {},
    "outputs": [],
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "1715fe84-65a9-4ce5-8388-8505adeca553",
    "metadata": {},
    "outputs": [],
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "31c1a8e3-c320-4eb9-8b47-ea49f92ee133",
    "metadata": {},
    "outputs": [],
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "0b64661b-38e1-47e4-99f3-91d605750f1c",
    "metadata": {},
    "outputs": [],
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "f33695cc-692b-4bab-aace-ad6617b2647e",
    "metadata": {},
    "outputs": [],
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "f98be9b1-20e3-4ad7-9dec-e43bf95cb931",
    "metadata": {},
    "outputs": [],
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "2c40cebd-6b5c-448b-8436-e90c0782969b",
    "metadata": {},
    "outputs": [],
@@ -146,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "8447299e-96c0-4364-a2f4-978f8bfc1b9d",
    "metadata": {},
    "outputs": [],
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "1e8cb5f6-900f-4a2a-a371-57da60b3e239",
    "metadata": {},
    "outputs": [
