--- a/notebooks_paperplots/plot_paper_ready_rebuttal.ipynb
+++ b/notebooks_paperplots/plot_paper_ready_rebuttal.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "43954f7f-08c1-40a6-b913-d0603297bf88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "d8eeb65f-7946-45a3-b589-ddea372d834d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "e0e56c25-55f3-4fe8-8131-bead1b8691a8",
    "metadata": {},
    "outputs": [],
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "c2de9516-784f-480c-859b-0df3176958d7",
    "metadata": {},
    "outputs": [],
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "d5a820a6-efbd-478d-a8ee-19bdaedc5e9b",
    "metadata": {
     "tags": []
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "71eac61a-1414-44ed-8ae9-0f93ae2caabf",
    "metadata": {},
    "outputs": [],
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "a3d975ee-28f6-4b08-b739-ee5861a12756",
    "metadata": {},
    "outputs": [],
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "897065a0-da62-4c96-b6f4-66dd9f04e8b6",
    "metadata": {},
    "outputs": [],
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "1a75f2be-3dbd-4aff-a706-5e0b89e49e0e",
    "metadata": {},
    "outputs": [],
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "1269c244-5027-4b78-a3f1-fc9adcab7c36",
    "metadata": {},
    "outputs": [],
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "203128f3-d538-4d60-b7a2-5b5e8be478ab",
    "metadata": {},
    "outputs": [],
@@ -213,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "eb1843bc-819e-4bae-89da-ec0545469f39",
    "metadata": {},
    "outputs": [],
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "5c9795d9-50df-4add-8de3-0215e8895aa2",
    "metadata": {},
    "outputs": [],
@@ -246,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "7730e37b-17b0-4bf5-9bfe-882e4297b9c0",
    "metadata": {},
    "outputs": [
