plotting notebook changes

--- a/notebooks/plot_results_maml_trainconfig_check.ipynb
+++ b/notebooks/plot_results_maml_trainconfig_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "be1138fa-22f2-4570-a385-65cc086ee5a5",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "e3263412-3471-4f31-b647-b3271a26d8c5",
    "metadata": {},
    "outputs": [],
@@ -27,17 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "0b3eb7df-b912-474a-9e64-21364a9e9f02",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_path = '../runs/cifar10/softmax'"
+    "# results_path = '../runs_maml_tune/cifar20_100/softmax'\n",
+    "results_path = '../runs_maml_tune/gtsrb_02/softmax'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "ee50c0b3-c6e4-47d2-a151-f20a623dbcd6",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "id": "fc50e62e-ffa9-4961-ab31-32e11e047e9c",
    "metadata": {},
    "outputs": [],
@@ -63,13 +64,14 @@
     "                'single_maml_lr0.01_s5',\n",
     "                'single_maml_lr0.1_s1',\n",
     "                'single_maml_lr0.1_s2',\n",
-    "                'single_maml_lr0.1_s5']\n",
-    "p_out_lst = [0.1]"
+    "                #'single_maml_lr0.1_s5'\n",
+    "               ]\n",
+    "p_out_lst = [0.6] #[0.4] #[0.1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "id": "578e84e1-be5f-4440-aca2-6e9608a115aa",
    "metadata": {},
    "outputs": [],
@@ -101,7 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
+   "id": "37d8693d-d14a-4774-b9b3-be0aece6f340",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## p_out=0.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "c624e98c-7658-496d-bd3c-7c03bdc478e8",
    "metadata": {},
    "outputs": [
@@ -110,17 +122,55 @@
      "output_type": "stream",
      "text": [
       "single_maml_lr0.01_s1\n",
-      "['cov: 0.912', 'sys_acc: 83.405', 'exp_acc: 28.283', 'clf_acc: 88.754', 'exp_acc_alone: 26.865', 'clf_acc_alone: 85.260', 'val_loss: 1.696']\n",
+      "['cov: 0.907', 'sys_acc: 93.139', 'exp_acc: 49.710', 'clf_acc: 97.608', 'exp_acc_alone: 47.933', 'clf_acc_alone: 93.456', 'val_loss: 1.769']\n",
       "single_maml_lr0.01_s2\n",
-      "['cov: 0.916', 'sys_acc: 83.550', 'exp_acc: 31.192', 'clf_acc: 88.336', 'exp_acc_alone: 27.160', 'clf_acc_alone: 84.995', 'val_loss: 1.673']\n",
+      "['cov: 0.911', 'sys_acc: 93.250', 'exp_acc: 48.844', 'clf_acc: 97.588', 'exp_acc_alone: 48.254', 'clf_acc_alone: 93.341', 'val_loss: 1.777']\n",
       "single_maml_lr0.01_s5\n",
-      "['cov: 0.918', 'sys_acc: 83.625', 'exp_acc: 32.387', 'clf_acc: 88.221', 'exp_acc_alone: 27.190', 'clf_acc_alone: 85.035', 'val_loss: 1.684']\n",
+      "['cov: 0.912', 'sys_acc: 93.432', 'exp_acc: 50.278', 'clf_acc: 97.597', 'exp_acc_alone: 47.878', 'clf_acc_alone: 93.614', 'val_loss: 1.748']\n",
       "single_maml_lr0.1_s1\n",
-      "['cov: 0.914', 'sys_acc: 84.075', 'exp_acc: 37.710', 'clf_acc: 88.457', 'exp_acc_alone: 26.865', 'clf_acc_alone: 85.495', 'val_loss: 1.695']\n",
+      "['cov: 0.898', 'sys_acc: 93.104', 'exp_acc: 49.952', 'clf_acc: 98.019', 'exp_acc_alone: 47.933', 'clf_acc_alone: 93.939', 'val_loss: 1.786']\n",
       "single_maml_lr0.1_s2\n",
-      "['cov: 0.912', 'sys_acc: 84.550', 'exp_acc: 42.222', 'clf_acc: 88.634', 'exp_acc_alone: 27.160', 'clf_acc_alone: 86.140', 'val_loss: 1.688']\n",
-      "single_maml_lr0.1_s5\n",
-      "['cov: 0.931', 'sys_acc: 86.630', 'exp_acc: 48.769', 'clf_acc: 89.443', 'exp_acc_alone: 27.190', 'clf_acc_alone: 87.495', 'val_loss: 1.663']\n"
+      "['cov: 0.908', 'sys_acc: 92.906', 'exp_acc: 51.996', 'clf_acc: 97.075', 'exp_acc_alone: 48.254', 'clf_acc_alone: 93.104', 'val_loss: 1.833']\n"
+     ]
+    }
+   ],
+   "source": [
+    "metric='val_loss'\n",
+    "for l2d_type in l2d_type_lst:\n",
+    "    print(l2d_type)\n",
+    "    print([f'{metric}: {results[l2d_type][metric].mean():.3f}' for metric in metrics_lst])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e948d700-f19e-4533-a18e-35c12bb72ac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## p_out=0.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1089d6ff-d2c0-4f23-ad0e-5fd31a34a799",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "single_maml_lr0.01_s1\n",
+      "['cov: 0.870', 'sys_acc: 93.820', 'exp_acc: 63.902', 'clf_acc: 98.303', 'exp_acc_alone: 65.265', 'clf_acc_alone: 93.171', 'val_loss: 2.045']\n",
+      "single_maml_lr0.01_s2\n",
+      "['cov: 0.864', 'sys_acc: 93.452', 'exp_acc: 65.198', 'clf_acc: 97.871', 'exp_acc_alone: 65.095', 'clf_acc_alone: 92.557', 'val_loss: 2.051']\n",
+      "single_maml_lr0.01_s5\n",
+      "['cov: 0.870', 'sys_acc: 93.955', 'exp_acc: 66.535', 'clf_acc: 98.076', 'exp_acc_alone: 65.123', 'clf_acc_alone: 93.610', 'val_loss: 2.009']\n",
+      "single_maml_lr0.1_s1\n",
+      "['cov: 0.833', 'sys_acc: 92.672', 'exp_acc: 65.923', 'clf_acc: 98.028', 'exp_acc_alone: 65.265', 'clf_acc_alone: 92.177', 'val_loss: 2.129']\n",
+      "single_maml_lr0.1_s2\n",
+      "['cov: 0.826', 'sys_acc: 92.466', 'exp_acc: 66.252', 'clf_acc: 97.933', 'exp_acc_alone: 65.095', 'clf_acc_alone: 93.310', 'val_loss: 2.071']\n"
      ]
     }
    ],
